Bug fix: PPTX export now works on mobile devices.

--- a/src/main/resources/org/reactome/web/diagram/common/ExpandibleContainer.css
+++ b/src/main/resources/org/reactome/web/diagram/common/ExpandibleContainer.css
@@ -10,6 +10,9 @@
     -moz-transition: all 300ms linear;
     -o-transition: all 300ms linear;
     transition: all 300ms linear;
+
+    -webkit-tap-highlight-color: transparent;
+    outline-style: none;
 }
 
 .expandedContainer {
@@ -36,6 +39,7 @@
     -webkit-transform: translateY(-20px);
     -ms-transform: translateY(-20px);
     transform: translateY(-20px);
+    visibility: hidden;
 }
 
 .expandedContainer .optionButtons {
@@ -44,6 +48,7 @@
     -ms-transform: none;
     transform: none;
     margin: 8px auto 0;
+    visibility: visible;
 }
 
 .primaryButton{
